--- a/src/main/resources/ru/nucodelabs/gem/app-view.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/app-view.fxml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-
-<VBox fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="485.0" prefWidth="812.0" stylesheets="@./style.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nucodelabs.gem.AppController">
+<?import javafx.scene.text.Font?>
+<VBox fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+      prefHeight="485.0" prefWidth="812.0" stylesheets="@./style.css" xmlns="http://javafx.com/javafx/17"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nucodelabs.gem.AppController">
     <MenuBar>
         <Menu mnemonicParsing="false" text="%file">
-            <MenuItem mnemonicParsing="false" text="%create" />
+            <MenuItem mnemonicParsing="false" text="%create"/>
             <Menu mnemonicParsing="false" text="%open">
-                <MenuItem fx:id="menuFileOpenEXP" mnemonicParsing="false" onAction="#onMenuFileOpenEXP" text="EXP" />
-                <MenuItem fx:id="menuFileOpenMOD" disable="true" mnemonicParsing="false" onAction="#onMenuFileOpenMOD" text="MOD" />
+                <MenuItem fx:id="menuFileOpenEXP" mnemonicParsing="false" onAction="#onMenuFileOpenEXP" text="EXP"/>
+                <MenuItem fx:id="menuFileOpenMOD" disable="true" mnemonicParsing="false" onAction="#onMenuFileOpenMOD"
+                          text="MOD"/>
             </Menu>
-            <MenuItem mnemonicParsing="false" text="%close" />
+            <MenuItem mnemonicParsing="false" text="%close"/>
         </Menu>
         <Menu mnemonicParsing="false" text="%edit">
             <MenuItem mnemonicParsing="false" text="Delete" />
@@ -49,13 +51,13 @@
                                         <NumberAxis forceZeroInRange="false" side="BOTTOM" tickLabelsVisible="false" />
                                     </xAxis>
                                     <yAxis>
-                                        <NumberAxis forceZeroInRange="false" lowerBound="-100.0" side="LEFT" tickLabelsVisible="false" />
+                                        <NumberAxis forceZeroInRange="false" lowerBound="-100.0" side="LEFT"/>
                                     </yAxis>
                                     <opaqueInsets>
                                         <Insets />
                                     </opaqueInsets>
                                     <padding>
-                                        <Insets left="40.0" />
+                                        <Insets left="32.0"/>
                                     </padding>
                                 </LineChart>
                             </TitledPane>
@@ -64,22 +66,25 @@
                             <TitledPane fx:id="vesPane" collapsible="false" minHeight="0.0" text="%ves" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <LineChart fx:id="vesCurve" alternativeColumnFillVisible="true" cacheShape="false" centerShape="false" legendVisible="false" minHeight="100.0" scaleShape="false" visible="false">
                                     <xAxis>
-                                        <NumberAxis fx:id="vesCurveAxisX" forceZeroInRange="false" label="AB/2, m" prefHeight="26.0" prefWidth="481.0" side="BOTTOM">
+                                        <NumberAxis fx:id="vesCurveAxisX" label="AB/2, m" prefHeight="26.0"
+                                                    prefWidth="481.0" side="BOTTOM" tickUnit="1.0" upperBound="4.0">
                                             <cursor>
-                                                <Cursor fx:constant="DEFAULT" />
+                                                <Cursor fx:constant="DEFAULT"/>
                                             </cursor>
                                             <opaqueInsets>
-                                                <Insets />
+                                                <Insets/>
                                             </opaqueInsets>
                                             <tickLabelFont>
-                                                <Font size="14.0" />
+                                                <Font size="14.0"/>
                                             </tickLabelFont>
                                         </NumberAxis>
                                     </xAxis>
                                     <yAxis>
-                                        <NumberAxis fx:id="vesCurveAxisY" cache="true" forceZeroInRange="false" label="ρₐₚₚ, Ohm‧m" prefHeight="128.0" prefWidth="20.0" side="LEFT" tickLabelFill="#070707">
+                                        <NumberAxis fx:id="vesCurveAxisY" cache="true" label="ρₐ, Ohm‧m"
+                                                    lowerBound="1.0" prefHeight="128.0" prefWidth="20.0" side="LEFT"
+                                                    tickLabelFill="#070707" tickUnit="1.0" upperBound="4.0">
                                             <tickLabelFont>
-                                                <Font size="14.0" />
+                                                <Font size="14.0"/>
                                             </tickLabelFont>
                                         </NumberAxis>
                                     </yAxis>
@@ -112,15 +117,14 @@
                                 <TableView fx:id="experimentalTable" prefHeight="200.0" prefWidth="200.0"
                                            VBox.vgrow="ALWAYS">
                                     <columns>
-                                        <TableColumn fx:id="experimentalAB_2Column" editable="false"
-                                                     maxWidth="150.0" minWidth="20.0" prefWidth="100.0"
-                                                     sortable="false" text="%experimentalAB_2"/>
+                                        <TableColumn fx:id="experimentalAB_2Column" editable="false" maxWidth="150.0"
+                                                     minWidth="20.0" prefWidth="100.0" sortable="false"
+                                                     text="%experimentalAB_2"/>
                                         <TableColumn fx:id="experimentalResistanceApparentColumn" editable="false"
-                                                     maxWidth="150.0" minWidth="20.0" prefWidth="100.0"
-                                                     sortable="false" text="%experimentalResistanceApparent"/>
-                                        <TableColumn fx:id="experimentalErrorResistanceApparentColumn"
-                                                     editable="false" maxWidth="150.0" minWidth="20.0"
-                                                     prefWidth="100.0" sortable="false"
+                                                     maxWidth="150.0" minWidth="20.0" prefWidth="100.0" sortable="false"
+                                                     text="%experimentalResistanceApparent"/>
+                                        <TableColumn fx:id="experimentalErrorResistanceApparentColumn" editable="false"
+                                                     maxWidth="150.0" minWidth="20.0" prefWidth="100.0" sortable="false"
                                                      text="%experimentalErrorResistanceApparent"/>
                                     </columns>
                                 </TableView>
